--- a/index.html
+++ b/index.html
@@ -103,7 +103,26 @@
           </div>
         </div>
       </div>
+  
+  <script>
+    var acc = document.getElementsByClassName("accordion");
+    var i;
 
+    for (i = 0; i < acc.length; i++) {
+      acc[i].addEventListener("click", function () {
+        this.classList.toggle("active");
+        this.parentElement.classList.toggle("active");
+
+        var pannel = this.nextElementSibling;
+
+        if (pannel.style.display === "block") {
+          pannel.style.display = "none";
+        } else {
+          pannel.style.display = "block";
+        }
+      });
+    }
+  </script>
 <section id='sobre'>
 <container id="sobreco">
   <i class='bx bx-store-alt'></i>
