--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
         </p>
       </div>
     </div>
-    <script>
+
+  <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
 
@@ -195,16 +196,16 @@
       });
     }
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+
+<div>
+    <footer id="meio">
+        <p>&copy; 2024 GoodTrip. - Privacidade - Termos - Mapa do site - Informações da empresa</p>
+    </footer></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-                                                                          
 
 <script scr="script.js"></script>
-
-    <footer id="meio">
-        <p>&copy; 2024 GoodTrip. - Privacidade - Termos - Mapa do site - +55 (81) 248984359</p>
-    </footer>
 
 </html>
