--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
     <div>
         <button class="entrar-btn" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Tenho Interesse!</button>
-        <button class="cadastro-btn" onclick="window.location.href='#entrar'">Entrar</button>
     </div>
 </header>
 <div class="cima">
@@ -44,7 +43,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastre-se</h1>
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Tenho Interesse!</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
